Fix background image on mobile

--- a/app/static/mystyle.css
+++ b/app/static/mystyle.css
@@ -12,20 +12,16 @@
          url('/static/fonts/cabin-v12-latin-regular.svg#Cabin') format('svg'); /* Legacy iOS */
   }
 
-/* body#bg {
+body#bg {
     width: 100%;
     margin: 0;
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/background_optimized.jpg") no-repeat 50% 50% fixed;
-    background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    -webkit-background-size: cover;
     transition: width 0.5s ease, margin-left .5s;
     -moz-transition: width 0.5s ease, margin-left .5s;
     -webkit-transition: width 0.5s ease, margin-left .5s;
     background-color: black;
     will-change: width, margin-right;
-} */
+}
 
 body#bg:before {
     content: "";
@@ -36,7 +32,6 @@ body#bg:before {
     width: 100%;
     height: 100%;
     z-index: -10;
-    background-color: black;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/background_optimized.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -181,10 +176,6 @@ a.current {
     body#bg:before {
         background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/hero768.jpg") no-repeat 50% 50% fixed;
         background-color: black;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
     }
     .logoimg {
         width: 16rem;
@@ -215,10 +206,6 @@ a.current {
     body#bg:before {
         background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/hero480.jpg") no-repeat 50% 50% fixed;
         background-color: black;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
     }
     #navbar {
         flex-wrap: wrap;
